Add jabel example project